syntax = "proto3";
package pudding.trigger.v1;
option go_package = "github.com/beihai0xff/pudding/api/gen/pudding/trigger/v1;trigger";

import "google/api/annotations.proto";
import "google/protobuf/timestamp.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

import "pudding/trigger/v1/types.proto";

// These annotations are used when generating the OpenAPI file.
option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_swagger) = {
  info: {version: "1.0"};
  schemes: HTTPS;
};


// The Pudding WebhookTrigger service definition.
service WebhookTriggerService {
  // FindOneByID find webhook trigger template by id
  rpc FindOneByID (FindOneByIDRequest) returns (WebhookFindOneByIDResponse) {
    option (google.api.http) = {
      get: "/pudding/trigger/webhook/v1/find_one/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "find webhook trigger template by id"
      description: "find webhook trigger template by id"
      tags: "webhook_trigger"
    };
  }

  // PageQueryTemplate page query webhook trigger template
  rpc PageQueryTemplate (PageQueryTemplateRequest) returns (WebhookPageQueryResponse) {
    option (google.api.http) = {
      get: "/pudding/trigger/webhook/v1/page_query/template/{offset}/{limit}/{status}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "page query webhook trigger templates"
      description: "page query webhook trigger templates"
      tags: "webhook_trigger"
    };
  }

  // Register create a webhook trigger template
  rpc Register (WebhookTriggerServiceRegisterRequest) returns (WebhookRegisterResponse) {
    option (google.api.http) = {
      put: "/pudding/trigger/webhook/v1/register"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "create a webhook trigger template"
      description: "create a webhook trigger template"
      tags: "webhook_trigger"
    };
  }

  // UpdateStatus update webhook trigger template status
  rpc UpdateStatus (UpdateStatusRequest) returns (UpdateStatusResponse) {
    option (google.api.http) = {
      post: "/pudding/trigger/webhook/v1/update_status"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "update webhook trigger template status"
      description: "update webhook trigger template status"
      tags: "webhook_trigger"
    };
  }

  // Call call a webhook trigger
  rpc Call (WebhookTriggerServiceCallRequest) returns (WebhookTriggerServiceCallResponse) {
    option (google.api.http) = {
      put: "/pudding/trigger/webhook/v1/call/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "call a webhook trigger"
      description: "call a webhook trigger"
      tags: "webhook_trigger"
    };
  }

}

// WebhookFindOneByIDRequest The FindOneByID Response message.
message WebhookFindOneByIDResponse {
  WebhookTriggerTemplate body = 1;
}

message WebhookPageQueryResponse {
  uint64 count = 1;
  repeated WebhookTriggerTemplate body = 2;
}

message WebhookTriggerServiceRegisterRequest{
  string topic = 1;
  bytes payload = 2;
  int64 deliver_after = 3;
  google.protobuf.Timestamp excepted_end_time = 4;
  uint64 excepted_loop_times = 5;
}

message WebhookRegisterResponse{
  // url is webhook url
  string url = 1;
}

message WebhookTriggerServiceCallRequest{
  // trigger template ID
  uint64 id = 1;
}

message WebhookTriggerServiceCallResponse{
  // message_id delay message id
  string message_key = 1;
}




